<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.innopolis.intour24.auth.view.Impl.LoginNotRegisteredFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:src="@drawable/logo_color"
            android:layout_width="170dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_registered"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="300dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/register_please"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginTop="5dp"
            android:text="@string/register_button"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/login_button"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</FrameLayout>
