<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.innopolis.intour24.auth.view.Impl.LoginNewDataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:src="@drawable/logo_color"
            android:layout_width="170dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_data"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_marginTop="15dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"/>

        <EditText
            android:id="@+id/phone_number"
            android:layout_marginTop="5dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/phone_number_hint"/>

        <Button
            android:id="@+id/change_data_button"
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:background="@drawable/button_round_corners"
            android:text="@string/change_data_button"
            android:textColor="@color/white"/>

    </LinearLayout>

</FrameLayout>
