<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_background"
    android:padding="16dp"
    android:layout_margin="16dp">

    <EditText
        android:id="@+id/editText14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="19"
        android:inputType="textPersonName"
        android:hint="@string/card_number"
        style="@style/CardField"
        android:drawableLeft="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:ems="19"
        android:inputType="textPersonName"
        android:hint="@string/holder_name"
        android:layout_below="@+id/editText14"
        android:layout_alignLeft="@+id/editText14"
        android:layout_alignStart="@+id/editText14"
        style="@style/CardField"
        android:drawableLeft="@mipmap/ic_launcher"/>

    <EditText
        android:id="@+id/editText16"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText15"
        android:layout_alignStart="@+id/editText15"
        android:layout_below="@+id/editText15"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/expired_date"
        style="@style/CardField"
        android:drawableLeft="@mipmap/ic_launcher"/>

    <EditText
        android:id="@+id/editText17"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignBaseline="@+id/editText16"
        android:layout_alignBottom="@+id/editText16"
        android:layout_toRightOf="@+id/editText16"
        android:layout_toEndOf="@+id/editText16"
        android:layout_marginLeft="8dp"
        style="@style/CardField"
        android:drawableLeft="@mipmap/ic_launcher"
        android:hint="CVS"/>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignTop="@+id/editText17"
        android:layout_alignRight="@+id/editText15"
        android:layout_alignEnd="@+id/editText15" />
</RelativeLayout>